# crytter

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  serve.py  server.mjs
crates/crytter-grid/: Cargo.toml
crates/crytter-grid/src/: attr.rs  cell.rs  cursor.rs  grid.rs  lib.rs  links.rs  search.rs  selection.rs  term.rs
crates/crytter-grid/tests/: integration.rs
crates/crytter-input/: Cargo.toml
crates/crytter-input/src/: keymap.rs  lib.rs
crates/crytter-render/: Cargo.toml
crates/crytter-render/src/: lib.rs  palette.rs  renderer.rs
crates/crytter-vte/: Cargo.toml
crates/crytter-vte/src/: lib.rs
crytter-wasm/: Cargo.toml
crytter-wasm/src/: lib.rs
doc/: testing-guide.md
inbox/: hermytt-cors-response.md  hermytt-debug-request.md
scripts/: build-npm.sh
tests/e2e/: claude-code.spec.mjs  debug-claude.spec.mjs  record-session.spec.mjs  replay-session.spec.mjs
tests/fixtures/: claude-session.json
www/: index.html  replay.html
