[workspace]
resolver = "2"
members = [
    "crates/crytter-vte",
    "crates/crytter-grid",
    "crates/crytter-render",
    "crates/crytter-input",
    "crytter-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
vte = "0.15"
web-sys = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
